# order_service

./: docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 07c1a627e46e_change_orders.py  13cde68fd102_change_orders.py  19203a8c2b9e_i.py  51e24b4521f3_outbox.py  5cd9c0eb99bc_update_order_model.py  aab4f8247d54_fix_order.py  b8a7cff24c89_update_order_model.py  d9ae63693a76_i.py  e507864adedc_update_order_model.py  f4b742a5c5b9_inbox.py  fd1c32d769c2_update_order_model.py
docker-build/app/: Dockerfile
src/: container.py  main.py  settings.py
src/application/: container.py  exceptions.py
src/application/dtos/: inbox.py  order.py  outbox.py  payment.py
src/application/interfaces/: http_clients.py  repositories.py  uow.py
src/application/use_cases/: create_order.py  get_order_by_id.py  payment_callback.py  process_inbox_events.py  process_outbox_events.py  send_notification.py
src/domain/value_objects/: event_type.py  inbox_event_status.py  order_status.py  outbox_event_status.py
src/infrastructure/: container.py  uow.py
src/infrastructure/db/: __init__.py  models.py
src/infrastructure/db/models/: __init__.py  inbox.py  orders.py  outbox.py
src/infrastructure/http/: catalog_service.py  notifications_service.py  payments_service.py
src/infrastructure/message_broker/: kafka_consumer.py  kafka_producer.py
src/infrastructure/repositories/: inbox.py  orders.py  ordes.py  outbox.py
src/infrastructure/utils/: serializer_for_json.py
src/presentation/api/: __init__.py  orders.py
